added all necessary project files

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,25 @@
 $c-gray: #eee;
+$c-white: #fff;
+
+$logoWidth: 68px;
+$logoHeight: 72px;
+
+$containerPadding: 175px;
+$containerPaddingMedium: 55px;
+$containerPaddingSmall: 35px;
+$containerPaddingMinimum: 20px;
+
+$btn-size: 70px;
+
+$lectureWidth: 540px;
+$lectureHeight: 204px;
+
+$lectureMinimumWidth:278px;
+$lectureMinimumHeight: 154px;
+
+$redBoxSize: 15px;
+$redBoxSmallSize: 10px;
+
+$navGap: 20px 162px;
+$navGapMedium: 20px 197px;
+$navGapSmall: 20px 55px;
