--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,34 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+
+@import "components/header";
+@import "components/container";
+@import "components/logo";
+@import "components/toggler";
+
+@import "components/main";
+
+@import "components/hero";
+@import "components/button";
+@import "components/title";
+@import "components/event";
+
+@import "components/lecture";
+
+@import "components/radio";
+@import "components/gallery";
+@import "components/subscribe";
+
+@import "components/footer";
+@import "components/public";
+@import "components/schedule";
+@import "components/contacts";
+@import "components/nav";
 
 body {
-  background: $c-gray;
+  height: 100%;
+  overflow-x: hidden;
+  background: $c-white;
 }
